# 2023-ha1-matrices

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  matrices.cpp  matrices.hpp
.github/workflows/: tests.yaml
smoke_test/: smoke_test.sh
src/common/: generator.h  hash.h  vector.h
src/matrices/: CMakeLists.txt
src/matrices/include/: matrices.hpp
src/matrices/src/: main.cpp  matrices.cpp
